[package]
name = "astro-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
